# app/api/index.go
@@ -2,10 +2,8 @@ package api
 
 import (
 	"BscDapp/app/common"
-	"BscDapp/app/dao"
 	"BscDapp/app/model"
 	"BscDapp/app/service"
-	"github.com/gogf/gf/frame/g"
 	"github.com/gogf/gf/net/ghttp"
 	"net/http"
 )
@@ -51,16 +49,8 @@ func (a *indexApi) BaseInfo(r *ghttp.Request) {
 // @router  /api/index/game-info   [GET]
 // @success 200 {object} model.GameIndexInfo "执行结果"
 func (a *indexApi) GameInfo(r *ghttp.Request) {
-	data := model.GameIndexInfo{}
-	res, err := dao.FaBscGameInfo.Where("status=1").Order("round desc").One()
+	data, err := service.Index.GetGameBaseInfo()
 	if err != nil {
-		g.Log().Debug("Api Index GameInfo GameInfo One Err:", err)
-		_ = r.Response.WriteJsonExit(service.JsonResponse{Code: http.StatusBadRequest, Message: err.Error()})
-	}
-	data.FaBscGameInfo = res
-	data.TotalInvest, err = dao.FaBscUserGame.Where("game_round=?", res.Round).Sum(dao.FaBscUserGame.Columns.InvestNum)
-	if err != nil {
-		g.Log().Debug("Api Index GameInfo UserGame InvestNum Err:", err)
 		_ = r.Response.WriteJsonExit(service.JsonResponse{Code: http.StatusBadRequest, Message: err.Error()})
 	}
 	_ = r.Response.WriteJsonExit(service.JsonResponse{Code: http.StatusOK, Data: data, Message: common.SuccessMsg})
@@ -71,7 +61,7 @@ func (a *indexApi) GameInfo(r *ghttp.Request) {
 // @produce json
 // @param   page formData int false "页码"
 // @param   size formData int false "每页数量"
-// @router  /api/index/get-reward-top  [GET]
+// @router  /api/index/get-reward-top  [POST]
 // @success 200 {object} model.UserRewardTop "执行结果"
 func (a *indexApi) GetRewardTop(r *ghttp.Request) {
 	var (
@@ -85,4 +75,31 @@ func (a *indexApi) GetRewardTop(r *ghttp.Request) {
 		_ = r.Response.WriteJsonExit(service.JsonResponse{Code: http.StatusBadRequest, Message: err.Error()})
 	}
 	_ = r.Response.WriteJsonExit(service.JsonResponse{Code: http.StatusOK, Data: data, Message: common.SuccessMsg})
+}
+
+//func (a *indexApi) SystemInit(r *ghttp.Request) {
+//	dao.FaBscCredit.Where("id>0").Delete()
+//	dao.FaBscGameInfo.Where("id>0").Delete()
+//	dao.FaBscListenLog.Where("id>0").Delete()
+//	dao.FaBscTask.Where("id>0").Delete()
+//	dao.FaBscTransfer.Where("id>0").Delete()
+//	dao.FaBscUserGame.Where("id>0").Delete()
+//	dao.FaBscUserTicket.Where("id>0").Delete()
+//
+//	dao.FaBscUser.Where("id>0").Delete()
+//	dao.FaBscUser.OmitEmpty().Save(g.Map{"id": 1, "address": model.OwnAddr, "ref_id": 0})
+//	dao.FaBscBaseInfo.Where("theKey=?", model.BaseSpendKey).Update(g.Map{"theValue": 0})
+//
+//}
+
+// @summary 登录
+// @tags    系统信息
+// @produce json
+// @param   address formData string true "钱包地址"
+// @router  /api/index/login  [POST]
+// @success 200 {object} model.UserRewardTop "执行结果"
+func (a *indexApi) Login(r *ghttp.Request) {
+	address := r.GetString("address")
+	r.Cookie.Set("address", address)
+	_ = r.Response.WriteJsonExit(service.JsonResponse{Code: http.StatusOK, Message: common.SuccessMsg})
 }
